fix product and categories model and add exceptions